--- a/style/sass/module/streetwalk.scss
+++ b/style/sass/module/streetwalk.scss
@@ -560,7 +560,7 @@
 }
 
 
-.streetwalkImg,.element-fixed,.blurImg {
+.streetwalkImg,.streetwalkImgHighRes {
     position: fixed;
     top:0;
     bottom:0;
